# tigrbl_auth

./: .dockerignore  .gitignore  AGENT.md  CERTIFICATION_STATUS.md  CURRENT_STATE.md  Dockerfile.dev-resource-validation-api  Dockerfile.dev-service-admin-api  Dockerfile.dev-tigrbl  README.md  docker-compose.demo-hub-uix.yml  docker-compose.developer-api.yml  docker-compose.my-account-api.yml  docker-compose.platform-admin-api.yml  docker-compose.public-api.yml  docker-compose.resource-validation-api.yml  docker-compose.service-admin-api.yml  docker-compose.tenant-admin-api.yml  docker-compose.yml  package-lock.json  package.json  pyproject.toml  tigrbl-jsonrpc-repro.sqlite  tox.ini
.codex/environments/: environment.toml
.github/: CODEOWNERS  dependabot.yml
.github/codeql/: codeql-config.yml
.github/workflows/: _certification-matrix.yml  _contracts.yml  _evidence.yml  _publish.yml  _quality.yml  _release-bundle.yml  ci-certify-artifacts-dispatch.yml  ci-install-profiles.yml  ci-release-gates.yml  main.yml  master.yml  monorepo-npm-package-release.yml  monorepo-package-release-trusted.yml  monorepo-package-release.yml  package-node-matrix.yml  package-python-matrix.yml  pr.yml  recertify.yml  release-candidate.yml  release.yml
.operator-state-test/keys-state-0ce671857ff22086/: metadata.json  operator_plane.sqlite3
.operator-state-test/operator-state-2b038e589cf9bf78/: metadata.json  operator_plane.sqlite3
.operator-state-test/portability-import-3eea47f10ecf28a5/: metadata.json  operator_plane.sqlite3
.operator-state-test/portability-source-36caba9e85482261/: metadata.json  operator_plane.sqlite3
.operator-state-test/tigrbl_auth-9a06a2e3bfb81899/: metadata.json  operator_plane.sqlite3
.operator-state/keys-state-04e0f014f785100b/: metadata.json  operator_plane.sqlite3
.operator-state/keys-state-0809bb5273991329/: metadata.json  operator_plane.sqlite3
.operator-state/operator-state-370c7fcf4504dbfb/: metadata.json  operator_plane.sqlite3
.operator-state/operator-state-deb4cbe2c2b353fd/: metadata.json  operator_plane.sqlite3
.operator-state/portability-import-0524153496f82989/: metadata.json  operator_plane.sqlite3
.operator-state/portability-import-1c13a3f777d04d82/: metadata.json  operator_plane.sqlite3
.ssot/: registry.json
.ssot/adr/: ADR-0600-canonical-json-registry.yaml  (+193 more)
architecture/: base-package-taxonomy.yaml  concrete-package-taxonomy.yaml  contract-ownership.yaml  contract-package-taxonomy.yaml  durability-package-taxonomy.yaml  provider-package-taxonomy.yaml  workload-identity-artifact-support.md
constraints/: base.txt  dependency-lock.json  runner-tigrcorn.txt  test.txt
docker/: Dockerfile  Dockerfile.dev-developer-api  Dockerfile.dev-developer-app  Dockerfile.dev-my-account-api  Dockerfile.dev-my-account-app  Dockerfile.dev-platform-admin-api  Dockerfile.dev-platform-admin-app  Dockerfile.dev-platform-admin-app.dockerignore  Dockerfile.dev-public-api  Dockerfile.dev-public-app  Dockerfile.dev-resource-validation-api  Dockerfile.dev-resource-validation-app  Dockerfile.dev-service-admin-api  Dockerfile.dev-service-admin-app  Dockerfile.dev-tenant-admin-api  Dockerfile.dev-tenant-admin-app  Dockerfile.local-tigrbl  docker-compose.demo-hub-uix.yml  docker-compose.developer-api.yml  docker-compose.developer-app.yml  docker-compose.my-account-api.yml  docker-compose.my-account-app.yml  docker-compose.platform-admin-api.yml  docker-compose.platform-admin-app.yml  docker-compose.public-api.yml  docker-compose.public-app.yml  docker-compose.resource-validation-api.yml  docker-compose.resource-validation-app.yml  docker-compose.service-admin-api.yml  docker-compose.service-admin-app.yml  docker-compose.tenant-admin-api.yml  docker-compose.tenant-admin-app.yml  docker-compose.yml
docs/: amr-screen-support-matrix.md  authorization-models-focus.md  authorization-vendor-coverage-matrix.md  competitor-api-surface-feature-matrix.md  competitor-feature-surface-matrix-selection.md  competitor-product-surface-research.md  frontdoor-api-competitor-map.md  iam-ciam-pam-focus.md  iam-ciam-pam-vendor-coverage-matrix.md  idp-vendor-coverage-matrix.md  m2m-vendor-coverage-matrix.md  m2m-workload-identity-focus.md  mfa-focus.md  mfa-vendor-coverage-matrix.md  oauth-2-0-2-1-focus.md  oauth-2x-vendor-coverage-matrix.md  oidc-party-vendor-coverage-matrix.md  oidc-party-vendor-support-matrix.md  scim-v2-focus.md  scim-v2-vendor-coverage-matrix.md  security-certification-concern-plan.md  standards-concrete-delivery.md  standards-vocabulary-gap-audit.md
pkgs/: layers.toml
runtime_secrets/: jwt_ed25519.kid
scripts/: _surface_checks.py  build_release_bundle.py  bump_pyproject_version.py  clean_room_profile_smoke.py  cut_final_release.py  ensure_claim_package_metadata.py  ensure_split_package_metadata.py  execute_peer_profiles.py  freeze_truth_chain.py  generate_capability_registry.py  generate_certification_evidence_index.py  generate_certification_gap_inventory.py  generate_certification_scope.py  generate_claim_registries.py  generate_cwt_claim_packages.py  generate_discovery_snapshots.py  generate_effective_release_manifests.py  generate_non_rfc_status_report.py  generate_oidc_claim_packages.py  generate_openapi_contract.py  generate_openrpc_contract.py  generate_package_review_gap_analysis.py  generate_release_decision_record.py  generate_rfc_family_status_report.py  generate_state_reports.py  generate_test_coverage_heatmap.py  materialize_phase12_runtime_operator_tier3.py  materialize_runtime_operator_tier3.py  materialize_tier3_evidence.py  materialize_tier4_peer_evidence.py  monorepo_release.py  normalize_capability_readmes.py  package_layer_policy.py  record_validated_run.py  run_certification_lane.py  run_migration_portability.py  run_release_gates.py  sign_release_bundle.py  tox_pip_install.py  validate_layer_boundaries.py  (+3 more)
tests/: conftest.py  lanes.py
tigrbl_auth/: __init__.py  _identity_storage.py  backends.py  db.py  document_authority.py  errors.py  framework.py  jwtoken.py  oidc_userinfo.py  runtime_cfg.py
tigrbl_auth_workspace/: __init__.py
(+8168 files in other folders)
