[project]
name = "tigrbl-auth-workspace"
version = "0.4.0.dev2"
description = "Workspace-only development harness for the split Tigrbl identity package suite."
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.10,<3.13"
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]
authors = [{ name = "Jacob Stewart", email = "jacob@swarmauri.com" }]
keywords = ["oidc", "oauth2", "identity-provider", "jwks", "jwt", "tigrbl", "sdk", "standards", "auth", "authentication"]
dependencies = [
    "tigrbl==0.4.4.dev1",
    "tigrbl-atoms==0.4.4.dev1",
    "tigrbl-base==0.4.4.dev1",
    "tigrbl-canon==0.4.4.dev1",
    "tigrbl-concrete==0.4.4.dev1",
    "tigrbl-core==0.4.4.dev1",
    "tigrbl-kernel==0.4.4.dev1",
    "tigrbl-ops-olap==0.4.4.dev1",
    "tigrbl-ops-oltp==0.4.4.dev1",
    "tigrbl-ops-realtime==0.4.4.dev1",
    "tigrbl-orm==0.4.4.dev1",
    "tigrbl-runtime==0.4.4.dev1",
    "tigrbl-typing==0.4.4.dev1",
    "swarmauri_core==0.10.0",
    "swarmauri_base==0.10.0",
    "swarmauri_standard==0.10.0",
    "swarmauri_tokens_jwt==0.3.0.dev31",
    "swarmauri_signing_jws==0.3.0.dev31",
    "swarmauri_signing_ed25519==0.2.0.dev32",
    "swarmauri_signing_dpop==0.1.1",
    "swarmauri_crypto_jwe==0.3.0.dev5",
    "swarmauri_crypto_paramiko==0.4.0.dev5",
    "swarmauri_keyprovider_file==0.2.0",
    "swarmauri_keyprovider_local==0.2.0",
    "python-multipart==0.0.27",
    "sqlalchemy[asyncio]==2.0.49",
    "pydantic[email]==2.12.5",
    "pydantic-settings==2.13.1",
    "python-dotenv==1.2.2",
    "PyYAML==6.0.3",
    "bcrypt==5.0.0",
    "httpx==0.28.1",
    "aiosqlite==0.22.1",
    "tigrbl-identity-contracts==0.4.0.dev2",
    "tigrbl-authz-policy-rules-concrete==0.4.0.dev2",
    "tigrbl-authz-policy-combiner-default==0.4.0.dev2",
    "tigrbl-authz-policy-evaluators-default==0.4.0.dev2",
    "tigrbl-authz-policy-attributes-mapping==0.4.0.dev2",
    "tigrbl-authz-policy-obligations-concrete==0.4.0.dev2",
    "tigrbl-security-authorization-provenance-builder==0.1.0",
    "tigrbl-identity-identities-concrete==0.4.0.dev2",
    "tigrbl-identity-credentials-concrete==0.4.0.dev2",
    "tigrbl-security-key-rotation-policy-contracts==0.1.0",
    "tigrbl-identity-admin-advanced-authenticator-registry==0.4.0.dev2",
    "tigrbl-identity-admin-auth-anomaly-detector==0.4.0.dev2",
    "tigrbl-identity-admin-control-plane==0.4.0.dev2",
    "tigrbl-identity-admin-federation-registry==0.4.0.dev2",
    "tigrbl-identity-admin-policy-registry==0.4.0.dev2",
    "tigrbl-identity-admin-relationship-graph==0.4.0.dev2",
    "tigrbl-identity-admin-trust-federation-graph==0.4.0.dev2",
    "tigrbl-auth-protocol-oidc-backchannel-replay-store==0.4.0.dev2",
    "tigrbl-oauth-scope-matcher==0.4.0.dev2",
    "tigrbl-oidc-claims-concrete==0.4.0.dev2",
    "tigrbl-oidc-subject-strategy==0.4.0.dev2",
    "tigrbl-authz-policy-authority-derivation-graph==0.4.0.dev2",
    "tigrbl-authz-policy-decision-engine==0.4.0.dev2",
    "tigrbl-authz-policy-invariant-registry==0.4.0.dev2",
    "tigrbl-release-contracts==0.1.0",
    "tigrbl-auth-release-certification==0.4.0.dev2",
    "tigrbl-security-trust-contracts==0.1.0",
    "tigrbl-security-trust-domain-bases==0.1.0",
    "tigrbl-security-certificate-mtls==0.1.0",
    "tigrbl-security-dpop-cnf-binding-validator==0.1.0",
    "tigrbl-security-mtls-cnf-binding-validator==0.1.0",
    "tigrbl-security-proof-dpop==0.1.0",
    "tigrbl-security-proof-pkce==0.1.0",
    "tigrbl-security-auth-context-acr-basic==0.1.0",
    "tigrbl-security-auth-context-amr-basic==0.1.0",
    "tigrbl-security-claims-provider-local==0.1.0",
    "tigrbl-security-subject-pairwise-provider==0.1.0",
    "tigrbl-security-webfinger-provider==0.1.0",
    "tigrbl-security-oidc-federation-provider==0.1.0",
    "tigrbl-security-sender-constraint-validator==0.1.0",
    "tigrbl-security-signing-pqc==0.1.0",
    "tigrbl-security-token-introspection-client==0.1.0",
    "tigrbl-security-token-jwks-cache==0.1.0",
    "tigrbl-authz-resource-server-verifier==0.4.0.dev2",
    "tigrbl-auth==0.4.0.dev2",
    "tigrbl-auth-protocol-oauth==0.4.0.dev2",
    "tigrbl-auth-protocol-oidc==0.4.0.dev2",
    "tigrbl-auth-protocol-rp==0.4.0.dev2",
    "tigrbl-authn-credentials==0.4.0.dev2",
    "tigrbl-authz-policy-admin-gate==0.4.0.dev2",
    "tigrbl-authz-policy==0.4.0.dev2",
    "tigrbl-auth-plugin==0.4.0.dev2",
    "tigrbl-authz-resource-server==0.4.0.dev2",
    "tigrbl-identity-cli==0.4.0.dev2",
    "tigrbl-identity-admin==0.4.0.dev2",
    "tigrbl-identity-author==0.4.0.dev2",
    "tigrbl-identity-core==0.4.0.dev2",
    "tigrbl-identity-credentials==0.4.0.dev2",
    "tigrbl-identity-jose==0.4.0.dev2",
    "tigrbl-identity-oauth==0.4.0.dev2",
    "tigrbl-identity-oidc==0.4.0.dev2",
    "tigrbl-identity-principals==0.4.0.dev2",
    "tigrbl-identity-operator==0.4.0.dev2",
    "tigrbl-identity-policy==0.4.0.dev2",
    "tigrbl-identity-resource-server==0.4.0.dev2",
    "tigrbl-identity-rp==0.4.0.dev2",
    "tigrbl-identity-runtime==0.4.0.dev2",
    "tigrbl-identity-server==0.4.0.dev2",
    "tigrbl-identity-storage==0.4.0.dev2",
    "tigrbl-identity-storage-runtime==0.4.0.dev2",
    "tomli==2.4.0; python_version < '3.11'",
]

[project.optional-dependencies]
test = [
    "pytest==9.0.3",
    "pytest-xdist==3.6.1",
    "pytest-json-report==1.5.0",
    "pytest-timeout==2.3.1",
    "pytest-benchmark==5.2.3",
    "pytest-asyncio==1.3.0",
    "requests==2.33.1",
    "ssot-registry==0.2.17",
]
postgres = [
    "asyncpg==0.31.0",
    "psycopg2-binary==2.9.11",
]
sqlite = [
    "aiosqlite==0.22.1",
]
uvicorn = [
    "tigrbl-identity-runtime[uvicorn]==0.4.0.dev2",
]
hypercorn = [
    "tigrbl-identity-runtime[hypercorn]==0.4.0.dev2",
]
tigrcorn = [
    "tigrbl-identity-runtime[tigrcorn]==0.4.0.dev2",
]
# Aggregate runner extra delegates concrete runner pins to tigrbl-identity-runtime.
servers = [
    "tigrbl-identity-runtime[servers]==0.4.0.dev2",
]

[project.urls]
Repository = "https://github.com/swarmauri/swarmauri-sdk"
Homepage = "https://github.com/swarmauri/swarmauri-sdk"

[tool.pytest.ini_options]
pythonpath = ["pkgs/60-runtime/tigrbl-identity-cli/src"]
testpaths = ["tests"]
norecursedirs = ["combined", "scripts", ".pytest_cache", "__pycache__", ".uv-cache", ".venv", "dist", ".benchmarks"]
markers = [
    "test: standard test",
    "unit: Unit tests",
    "integration: Integration tests",
    "negative: Negative-path rejection tests",
    "security: Security and abuse-case tests",
    "interop: Interoperability and peer-profile catalog tests",
    "conformance: Certification/conformance tests",
    "r8n: Regression tests",
    "timeout: mark test to timeout after X seconds",
    "extension: optional extension-lane tests outside the default certification boundary",
    "deferred: quarantined or out-of-scope tests excluded from the core certification lane",
    "runtime_heavy: tests that require the full runtime dependency stack",
    "xpass: Expected passes",
    "xfail: Expected failures",
    "acceptance: Acceptance tests",
    "perf: Performance tests that measure execution time and resource usage",
    "example: Usage examples from documentation",
]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)s] %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
asyncio_default_fixture_loop_scope = "function"
asyncio_mode = "auto"
addopts = "--import-mode=importlib --basetemp=.pytest-tmp"

[tool.ruff.lint.per-file-ignores]
"pkgs/**/src/**/__init__.py" = ["F401", "F403", "F405"]
"pkgs/01-storage/tigrbl-identity-storage/src/tigrbl_identity_storage/tables/**/_ops.py" = ["E402"]
"pkgs/01-storage/tigrbl-identity-storage/src/tigrbl_identity_storage/tables/token_record/_ops/__init__.py" = ["E402"]
"pkgs/60-runtime/tigrbl-identity-cli/src/tigrbl_identity_cli/cli/*/_*.py" = [
    "E402",
    "F401",
    "F405",
    "F601",
    "F821",
    "F822",
    "F841",
]
"scripts/*.py" = ["E402"]
"tests/**/*.py" = ["E402", "F403"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "pytest-xdist>=3.6.1",
    "pytest-json-report>=1.5.0",
    "requests>=2.32.3",
    "flake8>=7.0",
    "pytest-timeout>=2.3.1",
    "ruff>=0.9.9",
    "pytest-benchmark>=4.0.0",
    "tox>=4.23.2",
    "ssot-registry>=0.2.8",
]

[tool.uv]
package = false

[tool.uv.sources]
tigrbl-release-contracts = { path = "pkgs/02-contracts/tigrbl-release-contracts", editable = true }
tigrbl-auth-release-certification = { path = "pkgs/60-runtime/tigrbl-auth-release-certification", editable = true }
tigrbl-security-trust-contracts = { path = "pkgs/02-contracts/tigrbl-security-trust-contracts", editable = true }
tigrbl-security-trust-domain-bases = { path = "pkgs/05-bases/tigrbl-security-trust-domain-bases", editable = true }
tigrbl-security-certificate-mtls = { path = "pkgs/20-providers/tigrbl-security-certificate-mtls", editable = true }
tigrbl-security-dpop-cnf-binding-validator = { path = "pkgs/20-providers/tigrbl-security-dpop-cnf-binding-validator", editable = true }
tigrbl-security-mtls-cnf-binding-validator = { path = "pkgs/20-providers/tigrbl-security-mtls-cnf-binding-validator", editable = true }
tigrbl-security-proof-dpop = { path = "pkgs/20-providers/tigrbl-security-proof-dpop", editable = true }
tigrbl-security-proof-pkce = { path = "pkgs/20-providers/tigrbl-security-proof-pkce", editable = true }
tigrbl-security-auth-context-acr-basic = { path = "pkgs/20-providers/tigrbl-security-auth-context-acr-basic", editable = true }
tigrbl-security-auth-context-amr-basic = { path = "pkgs/20-providers/tigrbl-security-auth-context-amr-basic", editable = true }
tigrbl-security-claims-provider-local = { path = "pkgs/20-providers/tigrbl-security-claims-provider-local", editable = true }
tigrbl-security-subject-pairwise-provider = { path = "pkgs/20-providers/tigrbl-security-subject-pairwise-provider", editable = true }
tigrbl-security-webfinger-provider = { path = "pkgs/20-providers/tigrbl-security-webfinger-provider", editable = true }
tigrbl-security-oidc-federation-provider = { path = "pkgs/20-providers/tigrbl-security-oidc-federation-provider", editable = true }
tigrbl-security-sender-constraint-validator = { path = "pkgs/20-providers/tigrbl-security-sender-constraint-validator", editable = true }
tigrbl-security-signing-pqc = { path = "pkgs/20-providers/tigrbl-security-signing-pqc", editable = true }
tigrbl-security-token-introspection-client = { path = "pkgs/20-providers/tigrbl-security-token-introspection-client", editable = true }
tigrbl-security-token-jwks-cache = { path = "pkgs/20-providers/tigrbl-security-token-jwks-cache", editable = true }
tigrbl-auth = { path = "pkgs/70-facade/tigrbl-auth", editable = true }
tigrbl-auth-protocol-oauth = { path = "pkgs/50-protocols/tigrbl-auth-protocol-oauth", editable = true }
tigrbl-auth-protocol-oidc-backchannel-replay-store = { path = "pkgs/10-concrete/tigrbl-auth-protocol-oidc-backchannel-replay-store", editable = true }
tigrbl-oauth-scope-matcher = { path = "pkgs/10-concrete/tigrbl-oauth-scope-matcher", editable = true }
tigrbl-oidc-claims-concrete = { path = "pkgs/10-concrete/tigrbl-oidc-claims-concrete", editable = true }
tigrbl-oidc-subject-strategy = { path = "pkgs/10-concrete/tigrbl-oidc-subject-strategy", editable = true }
tigrbl-auth-protocol-oidc = { path = "pkgs/50-protocols/tigrbl-auth-protocol-oidc", editable = true }
tigrbl-auth-protocol-rp = { path = "pkgs/50-protocols/tigrbl-auth-protocol-rp", editable = true }
tigrbl-authn-credentials = { path = "pkgs/40-capabilities/tigrbl-authn-credentials", editable = true }
tigrbl-authz-policy-admin-gate = { path = "pkgs/40-capabilities/tigrbl-authz-policy-admin-gate", editable = true }
tigrbl-authz-policy-authority-derivation-graph = { path = "pkgs/10-concrete/tigrbl-authz-policy-authority-derivation-graph", editable = true }
tigrbl-authz-policy = { path = "pkgs/40-capabilities/tigrbl-authz-policy", editable = true }
tigrbl-authz-policy-decision-engine = { path = "pkgs/10-concrete/tigrbl-authz-policy-decision-engine", editable = true }
tigrbl-authz-policy-invariant-registry = { path = "pkgs/10-concrete/tigrbl-authz-policy-invariant-registry", editable = true }
tigrbl-auth-plugin = { path = "pkgs/60-runtime/tigrbl-auth-plugin", editable = true }
tigrbl-authz-resource-server-verifier = { path = "pkgs/20-providers/tigrbl-authz-resource-server-verifier", editable = true }
tigrbl-authz-resource-server = { path = "pkgs/50-protocols/tigrbl-authz-resource-server", editable = true }
tigrbl-identity-cli = { path = "pkgs/60-runtime/tigrbl-identity-cli", editable = true }
tigrbl-identity-admin = { path = "pkgs/40-capabilities/tigrbl-identity-admin", editable = true }
tigrbl-identity-author = { path = "pkgs/60-runtime/tigrbl-identity-author", editable = true }
tigrbl-identity-contracts = { path = "pkgs/02-contracts/tigrbl-identity-contracts", editable = true }
tigrbl-authz-policy-rules-concrete = { path = "pkgs/10-concrete/tigrbl-authz-policy-rules-concrete", editable = true }
tigrbl-authz-policy-combiner-default = { path = "pkgs/10-concrete/tigrbl-authz-policy-combiner-default", editable = true }
tigrbl-authz-policy-evaluators-default = { path = "pkgs/10-concrete/tigrbl-authz-policy-evaluators-default", editable = true }
tigrbl-authz-policy-attributes-mapping = { path = "pkgs/10-concrete/tigrbl-authz-policy-attributes-mapping", editable = true }
tigrbl-authz-policy-obligations-concrete = { path = "pkgs/10-concrete/tigrbl-authz-policy-obligations-concrete", editable = true }
tigrbl-security-authorization-provenance-builder = { path = "pkgs/20-providers/tigrbl-security-authorization-provenance-builder", editable = true }
tigrbl-identity-identities-concrete = { path = "pkgs/10-concrete/tigrbl-identity-identities-concrete", editable = true }
tigrbl-identity-credentials-concrete = { path = "pkgs/10-concrete/tigrbl-identity-credentials-concrete", editable = true }
tigrbl-security-key-rotation-policy-contracts = { path = "pkgs/02-contracts/tigrbl-security-key-rotation-policy-contracts", editable = true }
tigrbl-identity-admin-advanced-authenticator-registry = { path = "pkgs/10-concrete/tigrbl-identity-admin-advanced-authenticator-registry", editable = true }
tigrbl-identity-admin-auth-anomaly-detector = { path = "pkgs/10-concrete/tigrbl-identity-admin-auth-anomaly-detector", editable = true }
tigrbl-identity-admin-control-plane = { path = "pkgs/10-concrete/tigrbl-identity-admin-control-plane", editable = true }
tigrbl-identity-admin-federation-registry = { path = "pkgs/10-concrete/tigrbl-identity-admin-federation-registry", editable = true }
tigrbl-identity-admin-policy-registry = { path = "pkgs/10-concrete/tigrbl-identity-admin-policy-registry", editable = true }
tigrbl-identity-admin-relationship-graph = { path = "pkgs/10-concrete/tigrbl-identity-admin-relationship-graph", editable = true }
tigrbl-identity-admin-trust-federation-graph = { path = "pkgs/10-concrete/tigrbl-identity-admin-trust-federation-graph", editable = true }
tigrbl-identity-core = { path = "pkgs/00-primitives/tigrbl-identity-core", editable = true }
tigrbl-identity-credentials = { path = "pkgs/deprecated/tigrbl-identity-credentials", editable = true }
tigrbl-identity-jose = { path = "pkgs/20-providers/tigrbl-identity-jose", editable = true }
tigrbl-identity-oauth = { path = "pkgs/deprecated/tigrbl-identity-oauth", editable = true }
tigrbl-identity-oidc = { path = "pkgs/deprecated/tigrbl-identity-oidc", editable = true }
tigrbl-identity-principals = { path = "pkgs/40-capabilities/tigrbl-identity-principals", editable = true }
tigrbl-identity-operator = { path = "pkgs/60-runtime/tigrbl-identity-operator", editable = true }
tigrbl-identity-policy = { path = "pkgs/deprecated/tigrbl-identity-policy", editable = true }
tigrbl-identity-resource-server = { path = "pkgs/deprecated/tigrbl-identity-resource-server", editable = true }
tigrbl-identity-rp = { path = "pkgs/deprecated/tigrbl-identity-rp", editable = true }
tigrbl-identity-runtime = { path = "pkgs/60-runtime/tigrbl-identity-runtime", editable = true }
tigrbl-identity-server = { path = "pkgs/60-runtime/tigrbl-identity-server", editable = true }
tigrbl-identity-storage = { path = "pkgs/01-storage/tigrbl-identity-storage", editable = true }
tigrbl-identity-storage-runtime = { path = "pkgs/30-storage-runtime/tigrbl-identity-storage-runtime", editable = true }

[project.scripts]
tigrbl-auth = "tigrbl_identity_cli.cli.main:main"
